--- a/comands.html
+++ b/comands.html
@@ -58,7 +58,7 @@
                         <li class="navigation__item">
                             <a
                                 href="./pencode.html"
-                                class="navigation__link navigation__link--rotate current"
+                                class="navigation__link navigation__link--rotate"
                                 >Pen Code</a
                             >
                         </li>
@@ -74,7 +74,7 @@
                         <li class="navigation__item">
                             <a
                                 href="./comands.html"
-                                class="navigation__link navigation__link--positionsvg"
+                                class="navigation__link navigation__link--positionsvg current"
                                 ><svg
                                     width="15"
                                     height="15"
@@ -112,7 +112,7 @@
                         <caption
                             class="tabel__title tabel__title--moving-bottom"
                         >
-                            Приклади code paine
+                            Comands VS-code Terminal
                         </caption>
 
                         <thead class="tabel__head">
@@ -137,16 +137,12 @@
                                     1
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/qBYZPPr?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Flex conteiner</a
-                                    >
+                                    git stash
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Flex conteiner
+                                    Коли ви ще не робили git add, git commit i
+                                    git push, ця команда ховає наш код по типу
+                                    Ctrl X.
                                 </td>
                             </tr>
 
@@ -157,16 +153,10 @@
                                     2
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/YzLZLPr?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Накладення фото на інше</a
-                                    >
+                                    git checkout main
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Накладення фото на інше
+                                    Войти в main
                                 </td>
                             </tr>
 
@@ -177,16 +167,10 @@
                                     3
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/PoQgdGM?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Shadow-text</a
-                                    >
+                                    git pull —rebase
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Shadow-text
+                                    Взяти актуальний стан main собі в main
                                 </td>
                             </tr>
 
@@ -197,17 +181,10 @@
                                     4
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/QWrpENr?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Вирівнювання іконкі з силкою по
-                                        вертікалі
-                                    </a>
+                                    git checkout (назва вашої гілки)
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Вирівнювання іконкі з силкою по вертікалі
+                                    Повернутися до вашої гілки
                                 </td>
                             </tr>
 
@@ -218,40 +195,14 @@
                                     5
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/oNzQoZb?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Приклад зі зміною розташуванням
-                                        елементів border
-                                    </a>
+                                    git rebase main
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Приклад зі зміною розташуванням елементів
-                                    border
+                                    Забрати актуальальний стан мейну до себе на
+                                    гілку.
                                 </td>
                             </tr>
 
-                            <tr class="tabel__list tabel__list--primery">
-                                <td
-                                    class="tabel__item tabel__item--secondary centered"
-                                >
-                                    5
-                                </td>
-                                <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/KittyGiraudel/pen/nLRpaY"
-                                        rel="noopener norefferer nofollow"
-                                        >Flex conteiner</a
-                                    >
-                                </td>
-                                <td class="tabel__item tabel__item--secondary">
-                                    Flex conteiner
-                                </td>
-                            </tr>
                             <tr class="tabel__list tabel__list--primery">
                                 <td
                                     class="tabel__item tabel__item--secondary centered"
@@ -259,16 +210,10 @@
                                     6
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/PoebBVX?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Розташування малюнка з бордером</a
-                                    >
+                                    git stash apply
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Розташування малюнка з бордером
+                                    Повернути ваш незакомічений код.
                                 </td>
                             </tr>
 
@@ -279,16 +224,10 @@
                                     7
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/vYjyaqa?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >hover з зислкою та іконкою</a
-                                    >
+                                    git clone https://посилання_на_репозиторій
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    hover з сислкою та іконкою
+                                    клонуєте репозиторій
                                 </td>
                             </tr>
 
@@ -299,18 +238,13 @@
                                     8
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/JjvWPKm?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Прапор України</a
-                                    >
+                                    git checkout ‘назва-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Прапор України
+                                    Перехід на гілку ‘назва-гілки’
                                 </td>
                             </tr>
+
                             <tr class="tabel__list tabel__list--primery">
                                 <td
                                     class="tabel__item tabel__item--secondary centered"
@@ -318,19 +252,13 @@
                                     9
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/JjvvMoE?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >Change placeholder color on input
-                                        focus</a
-                                    >
+                                    git pull origin ‘назва-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Зміна фокусу input and plasholder
+                                    Стягує останні зміни гілки ‘назва-гілки’
                                 </td>
                             </tr>
+
                             <tr class="tabel__list tabel__list--primery">
                                 <td
                                     class="tabel__item tabel__item--secondary centered"
@@ -338,18 +266,13 @@
                                     10
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/eYreJEL"
-                                        rel="noopener norefferer nofollow"
-                                        >modal GoIT</a
-                                    >
+                                    git checkout -b ‘назва-нової-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    створення Modal вікна
+                                    Створює нову гілку
                                 </td>
                             </tr>
+
                             <tr class="tabel__list tabel__list--primery">
                                 <td
                                     class="tabel__item tabel__item--secondary centered"
@@ -357,16 +280,10 @@
                                     11
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/JjbErPB?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >CodePen Home CSS Heart Animation</a
-                                    >
+                                    git add . та git commit -m “назва-коміта”
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Анімація Heart
+                                    Записує зміни до локальної гілки
                                 </td>
                             </tr>
 
@@ -377,36 +294,10 @@
                                     12
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/GRWEWMZ?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >social rotate</a
-                                    >
+                                    git push origin ‘назва-вашої-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    Анімація іконок соціальних джерел
-                                </td>
-                            </tr>
-
-                            <tr class="tabel__list tabel__list--primery">
-                                <td
-                                    class="tabel__item tabel__item--secondary centered"
-                                >
-                                    12
-                                </td>
-                                <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/mpadalko/pen/GRWEWMZ?editors=1100"
-                                        rel="noopener norefferer nofollow"
-                                        >social rotate</a
-                                    >
-                                </td>
-                                <td class="tabel__item tabel__item--secondary">
-                                    Анімація іконок соціальних джерел
+                                    Публікує ваші зміни на гілці
                                 </td>
                             </tr>
 
@@ -417,16 +308,11 @@
                                     13
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/tutsplus/pen/gPMwWx"
-                                        rel="noopener norefferer nofollow"
-                                        >mask input user-name
-                                    </a>
+                                    git merge ‘назва-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    mask input user-name
+                                    Залиття коду з гілки ‘назва-гілки’ на
+                                    поточну гілку
                                 </td>
                             </tr>
 
@@ -434,19 +320,27 @@
                                 <td
                                     class="tabel__item tabel__item--secondary centered"
                                 >
-                                    13
+                                    14
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    <a
-                                        class="tabel__link"
-                                        target="_blank"
-                                        href="https://codepen.io/tutsplus/pen/zrBKZg"
-                                        rel="noopener norefferer nofollow"
-                                        >mask input user-name error
-                                    </a>
+                                    git branch -d ‘назва-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    mask input user-name error
+                                    Видалення гілки ‘назва-гілки’
+                                </td>
+                            </tr>
+
+                            <tr class="tabel__list tabel__list--primery">
+                                <td
+                                    class="tabel__item tabel__item--secondary centered"
+                                >
+                                    15
+                                </td>
+                                <td class="tabel__item tabel__item--secondary">
+                                    git fetch
+                                </td>
+                                <td class="tabel__item tabel__item--secondary">
+                                    Стягує всі зміни з віддаленого репозиторію
                                 </td>
                             </tr>
                         </tbody>
