--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
         <link
             rel="shortcut icon"
             type="image-jpg"
-            href="/icon-the-best-link.jpg"
+            href="/iconthebestlink.jpg"
         />
         <link
             rel="stylesheet"
