--- a/comands.html
+++ b/comands.html
@@ -323,7 +323,7 @@
                                     14
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
-                                    git branch -d ‘назва-гілки’
+                                    git branch -D ‘назва-гілки’
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
                                     Видалення гілки ‘назва-гілки’
@@ -341,6 +341,20 @@
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
                                     Стягує всі зміни з віддаленого репозиторію
+                                </td>
+                            </tr>
+
+                            <tr class="tabel__list tabel__list--primery">
+                                <td
+                                    class="tabel__item tabel__item--secondary centered"
+                                >
+                                    16
+                                </td>
+                                <td class="tabel__item tabel__item--secondary">
+                                    git push origin --delet 'назва-гілки'
+                                </td>
+                                <td class="tabel__item tabel__item--secondary">
+                                    Видалення гілки з github
                                 </td>
                             </tr>
                         </tbody>
