add changes files

--- a/pencode.html
+++ b/pencode.html
@@ -22,7 +22,7 @@
         <header>
             <div class="container">
                 <nav class="navigation">
-                    <ul class="navigation__list list">
+                    <ul class="navigation__list">
                         <li class="navigation__item">
                             <a
                                 href="./index.html"
@@ -447,6 +447,26 @@
                                 </td>
                                 <td class="tabel__item tabel__item--secondary">
                                     mask input user-name error
+                                </td>
+                            </tr>
+
+                            <tr class="tabel__list tabel__list--primery">
+                                <td
+                                    class="tabel__item tabel__item--secondary centered"
+                                >
+                                    14
+                                </td>
+                                <td class="tabel__item tabel__item--secondary">
+                                    <a
+                                        class="tabel__link"
+                                        target="_blank"
+                                        href="https://codepen.io/mainddv/pen/omdoEd"
+                                        rel="noopener norefferer nofollow"
+                                        >telephone mask input
+                                    </a>
+                                </td>
+                                <td class="tabel__item tabel__item--secondary">
+                                    telephone mask input
                                 </td>
                             </tr>
                         </tbody>
