--- a/video.html
+++ b/video.html
@@ -22,7 +22,7 @@
         <header>
             <div class="container">
                 <nav class="navigation">
-                    <ul class="navigation__list list">
+                    <ul class="navigation__list">
                         <li class="navigation__item">
                             <a
                                 href="./index.html"
